[package]
name = "com-impl-macro"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["full", "fold"] }
quote = { version = "1.0.9", default-features = false }
#quote = { version = "0.6", default-features = false }
heck = "0.3.3"
